# Amaranth

./: CMakeLists.txt  README.md
apps/amaranth_cli/: main.cpp
docs/: API_DRAFT.md
examples/: insert_search.cpp
include/amaranth/: amaranth.hpp  collection.hpp  database.hpp  distance.hpp  errors.hpp  flat_index.hpp  index.hpp  storage.hpp  types.hpp
src/: collection.cpp  database.cpp  distance.cpp  flat_index.cpp  storage.cpp
tests/: test_flat_index.cpp
